--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,10 @@ DB_PORT=
 DB_USERNAME=
 DB_PASSWORD=
 DB_NAME=
+TZ=
 PGADMIN_DEFAULT_EMAIL=
 PGADMIN_DEFAULT_PASSWORD=
+AWS_S3_ACCESS_KEY=
+AWS_S3_SECRET_KEY=
+AWS_S3_REGION_NAME=
+AWS_S3_BUCKET_NAME=
