Adding unit test config and category service unit test examples

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ pids
 *.pid
 *.seed
 *.pid.lock
+*.lock
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
