--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -20,24 +20,24 @@ jobs:
           npm install
           cd ..
 
-      - name: Start services locally
-        run: docker-compose up -d
-
       - name: Create app env file
         run: |
           touch .env
-          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-          echo DB_USERNAME=${{ secrets.DB_USERNAME }} >> .env
-          echo DB_PASSWORD=${{ secrets.DB_PASSWORD }} >> .env
-          echo DB_NAME=${{ secrets.DB_NAME }} >> .env
-          echo TZ=${{ secrets.TZ }} >> .env
-          echo PGADMIN_DEFAULT_EMAIL=${{ secrets.PGADMIN_DEFAULT_EMAIL }} >> .env
-          echo PGADMIN_DEFAULT_PASSWORD=${{ secrets.PGADMIN_DEFAULT_PASSWORD }} >> .env
-          echo AWS_S3_ACCESS_KEY= ${{ secrets.AWS_S3_ACCESS_KEY }} >> .env
-          echo AWS_S3_SECRET_KEY= ${{ secrets.AWS_S3_SECRET_KEY }} >> .env
-          echo AWS_S3_REGION_NAME= ${{ secrets.AWS_S3_REGION_NAME }} >> .env
-          echo AWS_S3_BUCKET_NAME= ${{ secrets.AWS_S3_BUCKET_NAME }} >> .env
+          echo DB_HOST = ${{ secrets.DB_HOST }} >> .env
+          echo DB_PORT = ${{ secrets.DB_PORT }} >> .env
+          echo DB_USERNAME = ${{ secrets.DB_USERNAME }} >> .env
+          echo DB_PASSWORD = ${{ secrets.DB_PASSWORD }} >> .env
+          echo DB_NAME = ${{ secrets.DB_NAME }} >> .env
+          echo TZ= ${{ secrets.TZ }} >> .env
+          echo PGADMIN_DEFAULT_EMAIL= correo@correo.com >> .env
+          echo PGADMIN_DEFAULT_PASSWORD= 1234 >> .env
+          echo AWS_S3_ACCESS_KEY = ${{ secrets.AWS_S3_ACCESS_KEY }} >> .env
+          echo AWS_S3_SECRET_KEY = ${{ secrets.AWS_S3_SECRET_KEY }} >> .env
+          echo AWS_S3_REGION_NAME = ${{ secrets.AWS_S3_REGION_NAME }} >> .env
+          echo AWS_S3_BUCKET_NAME = ${{ secrets.AWS_S3_BUCKET_NAME }} >> .env
+
+      - name: Start database locally
+        run: docker-compose up -d
 
       - name: Start NestJS app
         run: npm run start
@@ -48,8 +48,6 @@ jobs:
           touch .env
           echo BASE_URL=${{ secrets.LOCAL_BASE_URL }} >> .env
 
-      - name: Install e2e dependencies
-        run: npm install
 
       - name: Run e2e tests
         run: npm test
