--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -13,13 +13,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: | 
-          npm install
-          cd e2e/
-          npm install
-          cd ..
-
       - name: Create app env file
         run: |
           touch .env
@@ -29,25 +22,34 @@ jobs:
           echo DB_PASSWORD = ${{ secrets.DB_PASSWORD }} >> .env
           echo DB_NAME = ${{ secrets.DB_NAME }} >> .env
           echo TZ= ${{ secrets.TZ }} >> .env
-          echo PGADMIN_DEFAULT_EMAIL= correo@correo.com >> .env
-          echo PGADMIN_DEFAULT_PASSWORD= 1234 >> .env
+          echo PGADMIN_DEFAULT_EMAIL= ${{ secrets.PGADMIN_DEFAULT_EMAIL }} >> .env
+          echo PGADMIN_DEFAULT_PASSWORD= ${{ secrets.PGADMIN_DEFAULT_PASSWORD }} >> .env
           echo AWS_S3_ACCESS_KEY = ${{ secrets.AWS_S3_ACCESS_KEY }} >> .env
           echo AWS_S3_SECRET_KEY = ${{ secrets.AWS_S3_SECRET_KEY }} >> .env
           echo AWS_S3_REGION_NAME = ${{ secrets.AWS_S3_REGION_NAME }} >> .env
           echo AWS_S3_BUCKET_NAME = ${{ secrets.AWS_S3_BUCKET_NAME }} >> .env
 
+      - name: Install dependencies
+        run: | 
+          npm install
+          cd e2e/
+          npm install
+          cd ..
+
       - name: Start database locally
         run: docker-compose up -d
 
       - name: Start NestJS app
-        run: npm run start
+        run: npm run start &
+      
+      - name: Wait for 10 seconds
+        uses: GuillaumeFalourd/wait-sleep-action@v1
+        with:
+          time: '5s'
 
-      - name: Change directory to e2e and create env file 
+      - name: Run e2e tests
         run: |
           cd e2e/
           touch .env
-          echo BASE_URL=${{ secrets.LOCAL_BASE_URL }} >> .env
-
-
-      - name: Run e2e tests
-        run: npm test
+          echo BASE_URL=${{ secrets.TEST_BASE_URL }} >> .env
+          npm test
