--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -11,8 +11,7 @@ jobs:
 
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v3
-      - uses: actions/setup-docker@v4
+        uses: actions/checkout@v3
 
       - name: Create app env file
         run: |
@@ -38,6 +37,7 @@ jobs:
           cd ..
 
       - name: Start database locally
+        uses: actions/setup-docker@v4
         run: docker-compose up -d
 
       - name: Start NestJS app
